--- a/style.css
+++ b/style.css
@@ -71,3 +71,20 @@ li {
 a {
   text-decoration: none;
 }
+
+.weather-forecast {
+  margin: 20px;
+  text-align: center;
+  color: #000;
+}
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+.weather-forecast-temp-min {
+  opacity: 0.5;
+}
+
+.weather-forcast-temp {
+  font-size: 13px;
+}
